--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,6 +12,9 @@ jobs:
   build-deploy:
     # ubuntu OS を仮想マシン上に用意する
     runs-on: ubuntu-18.04
+    defaults:
+      run:
+        working-directory: ./src
     steps:
     - uses: actions/checkout@v2
 
