--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "export": "next export"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "gray-matter": "^4.0.2",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
-    "serve": "^11.3.2"
+    "@types/node": "^14.14.21",
+    "@types/react": "^17.0.0",
+    "serve": "^11.3.2",
+    "typescript": "^4.1.3"
   }
 }
