--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -51,6 +51,9 @@ jobs:
     - name: add nojekyll
       run: touch ./out/.nojekyll
 
+    - name: add CNAME
+      run: echo 'imjn.jp' > ./out/CNAME
+
     # gh-pagesブランチにoutディレクトリの中身をプッシュする
     # gh-pagesブランチは自動的に作成される
     - name: deploy
