--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "src",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,16 +14,15 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-twemoji": "^0.3.0",
+    "next": "14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.32.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.21",
+    "@types/node": "20.x",
     "@types/react": "^17.0.0",
     "serve": "^11.3.2",
     "typescript": "^4.1.3"
