--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,8 +1,5 @@
-## ref https://qiita.com/manten120/items/87e9e822800403904dc8
-
 name: github pages
 
-# masterブランチにプッシュしたときjobsに記述した操作を行う
 on:
   push:
     branches:
@@ -10,18 +7,15 @@ on:
 
 jobs:
   build-deploy:
-    # ubuntu OS を仮想マシン上に用意する
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
-    # Node.js環境のセットアップを行う
     - name: setup node
       uses: actions/setup-node@v1
       with:
         node-version: '20.x'
 
-    # npm install の際にキャッシュを使うよう設定
     - name: Cache dependencies
       uses: actions/cache@v1
       with:
@@ -30,33 +24,15 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    # package.jsonに基づき依存パッケージをインストールする
     - name: install
       run: npm install --frozen-lockfile
 
-    # Next.jsアプリをビルドする
-    # プロジェクトルート直下に.nextディレクトリができる
     - name: build
       run: npm run build
 
-    # 静的なHTMLとしてNext.jsアプリを生成する
-    # プロジェクトルート直下にoutディレクトリができる
-    # そのなかに、HTMLファイル群と、それらが読み込むJSファイル群を収めた_nextディレクトリがある
-    - name: export
-      run: npm run export
-
-    # しかしGitHub Pagesの仕様として_から始まるディレクトリが見えず404となる
-    # つまりHTMLからJSを読み込めない
-    # これを回避するために.nojekyllファイルをoutディレクトリに作る
     - name: add nojekyll
       run: touch ./out/.nojekyll
 
-    # https://github.com/tschaub/gh-pages/issues/127#issuecomment-319557682
-    - name: add CNAME
-      run: echo 'imjn.jp' > ./out/CNAME
-
-    # gh-pagesブランチにoutディレクトリの中身をプッシュする
-    # gh-pagesブランチは自動的に作成される
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
