--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
     "next": "^14.0.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^13.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "20.x",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^17.0.0",
     "serve": "^11.3.2",
     "typescript": "^4.1.3"
