--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,7 +34,7 @@ jobs:
       run: touch ./out/.nojekyll
 
     - name: add CNAME
-      run: echo 'www.nowperson.net' > ./out/CNAME
+      run: echo 'www.imjn.me' > ./out/CNAME
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
